--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
   <div class="home-container">
       <h1>Hello! I'm <span class="my-name">Tahseen</span>.</h1>
-      <h2>I am a Third Year ECE Student from Calgary, Canada!</h2>
-      <p> This website is a work in progress. </p>
-      <p> Currently, I am learning web development and messing around with an Arduino! </p>
+      <h2>Fourth Year Electrical and Computer Engineering Student</h2>
+      <p> I have always enjoyed problem solving, especially in the realm of hardware and software engineering. 
+        As a goal oriented individual, I hope to learn more about engineering
+        and its related technologies so that I can contribute to the world's continuous 
+        demand for implementing solutions to our everyday problems.
+      </p>
+      <p> Currently, I am learning web development and AWS! </p>
   </div>
+
 
   <div class="bottom-row">
     <div class="contact-bar">
