--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         and its related technologies so that I can contribute to the world's continuous 
         demand for implementing solutions to our everyday problems.
       </p>
-      <p> Currently, I am learning web development and AWS! </p>
+      <p> Currently, I am doing an Instrumentation and Controls (I&C) Engineering Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna International.</a>
+        I am still looking for Co-op/Internship positions starting in January or May 2022.
+      </p>
   </div>
 
 
