--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         demand for implementing solutions to our everyday problems.
       </p>
       <p> Currently, I am doing an Instrumentation and Controls (I&C) Engineering Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna International.</a>
-        I am still looking for Co-op/Internship positions starting in January or May 2022.
       </p>
+    <p> I am still looking for Co-op/Internship positions starting in January or May 2022. </p>
+    
   </div>
 
 
