Updated Index message
next co-op start date

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </p>
       <p> Currently, I am doing an Instrumentation and Controls (I&C) Engineering Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna International.</a>
       </p>
-    <p> I am still looking for Co-op/Internship positions starting in January or May 2022. </p>
+    <p> I am actively searching for Co-op/Internship positions starting in December 2021, January 2022 or May 2022. </p>
     
   </div>
 
