Job update (Jan 7 2022)

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         and its related technologies so that I can contribute to the world's continuous 
         demand for implementing solutions to our everyday problems.
       </p>
-      <p> Currently, I am doing an Instrumentation and Controls (I&C) Engineering Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna International.</a>
+      <p> I have finished an Instrumentation and Controls (I&C) Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna</a>, helping
+          out with document preparation for multiple Crude Desalting projects.
       </p>
-    <p> I am actively searching for Co-op/Internship positions starting in December 2021, January 2022 or May 2022. </p>
+    <p> I am currently an intern at <a href="https://www.attabotics.com/"> Attabotics</a>, working on robots with the Sustainability Team!
+    </p>
     
   </div>
 
