--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         and its related technologies so that I can contribute to the world's continuous 
         demand for implementing solutions to our everyday problems.
       </p>
-      <p> I have finished an Instrumentation and Controls (I&C) Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna</a>, helping
-          out with document preparation for multiple Crude Desalting projects.
+      <p> I have finished an Instrumentation and Controls (I&C) Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna</a>, where I helped prepare
+        documentation across multiple Crude Desalting projects.
       </p>
     <p> I am currently an intern at <a href="https://www.attabotics.com/"> Attabotics</a>, working on robots with the Sustainability Team!
     </p>
