--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Tahseen Intesar | ECE</title>
 
     <!--Bootstrap/FA
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
@@ -15,23 +15,38 @@
   </head>
   <body>
 
+  <!-- START: Name -->
   <div class="home-container">
       <h1>Hello! I'm <span class="my-name">Tahseen</span>.</h1>
-      <h2>Fourth Year Electrical and Computer Engineering Student</h2>
-      <p> I have always enjoyed problem solving, especially in the realm of hardware and software engineering. 
-        As a goal oriented individual, I hope to learn more about engineering
-        and its related technologies so that I can contribute to the world's continuous 
-        demand for implementing solutions to our everyday problems.
-      </p>
-      <p> I have finished an Instrumentation and Controls (I&C) Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna</a>, where I helped prepare
-        documentation across multiple Crude Desalting projects.
-      </p>
-    <p> I am currently an intern at <a href="https://www.attabotics.com/"> Attabotics</a>, working on robots with the Sustainability Team!
+      <h2>Electrical/Computer Engineer in Training (EIT) </h2>    
+  </div>
+
+  <!-- START: Work Experience -->
+  <div class="work-exp">
+    <p> I have finished 2 internships, in completely different roles!
+      <ul>
+        <li>
+          Instrumentation and Controls (I&C) Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna</a>
+        </li>
+
+        <li>
+          Embedded Systems Development at <a href="https://www.attabotics.com/"> Attabotics</a>
+        </li>
+      </ul> 
     </p>
-    
+  </div>
+  
+  <!-- START: Current Work Status -->
+  <div class="current-work" >
+    <h2> Currently working at NovAtel (Hexagon Autonomy and Positioning)!</h2>
+  
+    <p> First job out of university as a Software Designer <i>(which is the same thing as a developer!).</i> </p>
+    <p> My current work involves maintaining embedded and application level firmware on NovAtel's OEM7 products. </p>
+
   </div>
 
 
+  <!-- START: Contact Bar -->
   <div class="bottom-row">
     <div class="contact-bar">
         <a href="mailto:tahseen.intesar@gmail.com"><i class="las la-envelope la-3x"></i></a>
@@ -39,8 +54,15 @@
         <a href="https://github.com/TahseenI"><i class="lab la-github la-3x"></i></a>
         <a href="resume/TI_Resume.pdf"> <i class="las la-file-alt la-3x"></i></a>
     </div>
-    <hr />
   </div>
+  
+  <hr />
+
+    <!-- START: message-->
+    <div class="thankyou">
+      <p> Thanks for visiting! I don't really have much on here right now... but I do plan on making this look nicer at some point! </p>
+      <!-- <p> You can find a link to my résumé below.</p> -->
+    </div>
 
   </body>
 </html>
