--- a/index.html
+++ b/index.html
@@ -3,31 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tahseen</title>
+    <title>Tahseen Intesar</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-
-  <!-- START: Header -->
-  <div class="header-main">
-        <h1> <span class="my-name accent">Tahseen Intesar</span>. </h1>
-
-      <div class="header-description">
-        <h2> Computer Engineer </h2>
-        <div class="social">
-          <a href="https://github.com/tahseeni"><i class="lab la-github la-3x"></i></a>
-          <a href="https://www.linkedin.com/in/tahseen-intesar-24428127/"><i class="lab la-linkedin-in la-3x"></i></a>
-          <a href="resume/TI_Resume.pdf"> <i class="las la-file-alt la-3x"></i></a>
+    <div class="landing-main">
+      <div class="landing-content">
+        <div class="landing-left">
+          <span class="site-name">Tahseen Intesar</span>
+        </div>
+        <div class="landing-right">
+          <a href="about.html">About</a>
+          <a href="blog/blog_index.html">Blog</a>
+        </div>
+        <div class="landing-social">
+          <a href="https://github.com/tahseeni" title="GitHub"><i class="lab la-github la-3x"></i></a>
+          <a href="https://www.linkedin.com/in/tahseen-intesar-24428127/" title="LinkedIn"><i class="lab la-linkedin-in la-3x"></i></a>
+          <a href="resume/TI_Resume.pdf" title="Resume"><i class="las la-file-alt la-3x"></i></a>
         </div>
       </div>
-  </div>
-
-  <div class="currently"> 
-    <p> Welcome, I hope you're doing well! Thanks for stopping by. </p>
-    <p> This site is a WIP. </p> 
-  </div>
-
+    </div>
   </body>
 </html>
