--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
         <h2>About this site</h2>
         <p>
           This is my personal website that I made using HTML and CSS. Nothing fancy, just a simple website to "maintain" some blog posts or other thoughts.
-          I'd been meaning to redo the design of my initial webpage, but never got around to actually implementing it. I did the design myself, 
-          but used AI to figure out the CSS because that stuff's foreign to me!
+          I'd been meaning to redo the design of my initial webpage, but never got around to doing it. I did the design myself, 
+          but used AI to figure out the CSS because that stuff is foreign to me lol.
         </p>
 
       </div>
