--- a/index.html
+++ b/index.html
@@ -1,68 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tahseen Intesar | ECE</title>
-
-    <!--Bootstrap/FA
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tahseen Intesar</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-
-  <!-- START: Name -->
-  <div class="home-container">
-      <h1>Hello! I'm <span class="my-name">Tahseen</span>.</h1>
-      <h2>Electrical/Computer Engineer in Training (EIT) </h2>    
-  </div>
-
-  <!-- START: Work Experience -->
-  <div class="work-exp">
-    <p> I have finished 2 internships, in completely different roles!
-      <ul>
-        <li>
-          Instrumentation and Controls (I&C) Co-op at <a href="https://www.petro-techna.com/"> Petro-Techna</a>
-        </li>
-
-        <li>
-          Embedded Systems Development at <a href="https://www.attabotics.com/"> Attabotics</a>
-        </li>
-      </ul> 
-    </p>
-  </div>
-  
-  <!-- START: Current Work Status -->
-  <div class="current-work" >
-    <h2> Currently working at NovAtel (Hexagon Autonomy and Positioning)!</h2>
-  
-    <p> First job out of university as a Software Designer <i>(which is the same thing as a developer!).</i> </p>
-    <p> My current work involves maintaining embedded and application level firmware on NovAtel's OEM7 products. </p>
-
-  </div>
-
-
-  <!-- START: Contact Bar -->
-  <div class="bottom-row">
-    <div class="contact-bar">
-        <a href="mailto:tahseen.intesar@gmail.com"><i class="las la-envelope la-3x"></i></a>
-        <a href="https://www.linkedin.com/in/tahseen-intesar-24428127/"><i class="lab la-linkedin-in la-3x"></i></a>
-        <a href="https://github.com/TahseenI"><i class="lab la-github la-3x"></i></a>
-        <a href="resume/TI_Resume.pdf"> <i class="las la-file-alt la-3x"></i></a>
+    <div class="landing-main">
+      <div class="landing-content">
+        <div class="landing-left">
+          <span class="site-name">Tahseen Intesar</span>
+        </div>
+        <div class="landing-right">
+          <a href="about.html">About</a>
+          <a href="blog/blog_index.html">Blog</a>
+        </div>
+        <div class="landing-social">
+          <a href="https://github.com/tahseeni" title="GitHub"><i class="lab la-github la-3x"></i></a>
+          <a href="https://www.linkedin.com/in/tahseen-intesar-24428127/" title="LinkedIn"><i class="lab la-linkedin-in la-3x"></i></a>
+          <a href="resume/TI_Resume.pdf" title="Resume"><i class="las la-file-alt la-3x"></i></a>
+        </div>
+      </div>
     </div>
-  </div>
-  
-  <hr />
-
-    <!-- START: message-->
-    <div class="thankyou">
-      <p> Thanks for visiting! I don't really have much on here right now... but I do plan on making this look nicer at some point! </p>
-      <!-- <p> You can find a link to my résumé below.</p> -->
-    </div>
-
   </body>
 </html>
